force-app/main/default/objects/GPOS_Customer_Report__c/GPOS_Customer_Report__c.object-meta.xml
<CustomObject>
    <label>GPOS Customer Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPOS Customer Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>