force-app/main/default/objects/GPOS_Customer_Report__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>Url</type>
</CustomField>